fix screen number overflow issue

--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@ main {
     margin-top: 100px;
     max-width: 25em;
     border: 2px solid black;
+    position: relative;
 }
 
 button{
@@ -32,36 +33,45 @@ button{
 }
 
 .screen {
-    position: relative;
     margin: 1em;
     padding: 3px;
     height: 5em;
     background-color: rgb(170, 149, 154);
     margin-bottom: 1em;
+    position: relative;
+    width: 362px;
+    overflow-x: scroll;
+
 }
 
 
 #display {
     font-family: 'Orbitron', sans-serif;
     letter-spacing: 1px;
-    position: absolute;
-    top: 10px;
-    right: 0;
     font-size: 1.2em;
     color: rgb(53, 51, 51);
+    z-index:2;
+    position: absolute;
+    top: 20px;
+    right: 15px;
+    width: 90%;
+    text-align: right;
     
+
 }
 
 #answer {
     font-family: 'Orbitron', sans-serif;
     letter-spacing: 1px;
-    position: absolute;
     color: aliceblue;
-    text-align: right;
     font-size: 1.45em;
     margin-top: 12.5px;
+
+    position: absolute;
+    text-align: right;
     bottom: 5px;
     right: 0;
+    width: 90%;
     
 }
 
